SERVER-72530 Make $_internalOwningShard aggregation not cause a refresh of the sharding filtering metadata